JP GENERATION - PORFOLI GALLERY FIX

--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -331,7 +331,7 @@
                 <img alt="Hot red wine" class="pro-gal" src="../image/project/wintermenu-portfoli-05.webp"/>
             </div>
             <div class="modal-port">
-                <span class="close">&times;</span>
+                <span class="close-proj">&times;</span>
                 <img class="modalImage" id="img01"/>
             </div>
         </div>
