--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -92,28 +92,20 @@
 <!-------------PORTFOLI FOTO GALERRY-------------->
 <section class="gallery-port">
     <div class="container-port">
-        <div class="row">
-            <div class="gallery-filter">
-                <span class="filter-item active" data-filter="all">Všetky</span>
-                <span class="filter-item" data-filter="foto-produkcia">Foto produkcia</span>
-                <span class="filter-item" data-filter="graficky-dizajn">Graficky dizajn</span>
-                <span class="filter-item" data-filter="wordpress-web">WordPress web</span>
-                <span class="filter-item" data-filter="digitalna-strategia">Digitálna stratégia</span>
-            </div>
+        <div class="gallery-filter">
+            <span class="filter-item active" data-filter="all">Všetky</span>
+            <span class="filter-item" data-filter="foto-produkcia">Foto produkcia</span>
+            <span class="filter-item" data-filter="graficky-dizajn">Graficky dizajn</span>
+            <span class="filter-item" data-filter="wordpress-web">WordPress web</span>
+            <span class="filter-item" data-filter="digitalna-strategia">Digitálna stratégia</span>
         </div>
-        <div class="row">
+        <!-----------------------------------------1. column----------------------------------------->
+        <div class="column-port">
             <!-- gallery item start -->
-            <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
+            <div class="gallery-item digitalna-strategia" data-filter="digitalna-strategia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="Foto produkcia" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
-                             src="https://i.postimg.cc/7PJ4yYHh/revolt-164-6w-VEHf-I-unsplash.jpg">
-                        <div class="image-caption">Shoe</div>
-                    </div>
-                    <div class="image-overlay">
-                        <img alt="Foto produkcia" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/7PJ4yYHh/revolt-164-6w-VEHf-I-unsplash.jpg">
                         <div class="image-caption">Shoe</div>
                     </div>
@@ -126,7 +118,6 @@
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="headphone" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/zf7MT4q9/istockphoto-1289318271-170667a.jpg">
                         <div class="image-caption">Headphone</div>
                     </div>
@@ -139,20 +130,31 @@
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="camera" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/vZ7QQdMP/nordwood-themes-F3-Dde-9thd8-unsplash.jpg">
                         <div class="image-caption">Camera</div>
                     </div>
                 </div>
             </div>
             <!-- gallery item end -->
-
+        </div>
+        <!-----------------------------------------2. column----------------------------------------->
+        <div class="column-port">
             <!-- gallery item start -->
             <div class="gallery-item digitalna-strategia" data-filter="digitalna-strategia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="camera" onclick="openModal(this)" onmouseout="removeHoverEffect(this)"
-                             onmouseover="hoverEffect(this)" src="../../image/project/gtnight-portfoli-03.webp">
+                        <img alt="camera" onclick="openModal(this)" src="../../image/project/gtnight-portfoli-03.webp">
+                        <div class="image-caption">GT NIGHT</div>
+                    </div>
+                </div>
+            </div>
+            <!-- gallery item end -->
+
+            <!-- gallery item start -->
+            <div class="gallery-item wordpress-web" data-filter="wordpress-web">
+                <div class="gallery-item-inner">
+                    <div class="image-overlay">
+                        <img alt="camera" onclick="openModal(this)" src="../../image/project/gtnight-portfoli-03.webp">
                         <div class="image-caption">GT NIGHT</div>
                     </div>
                 </div>
@@ -163,33 +165,21 @@
             <div class="gallery-item digitalna-strategia" data-filter="digitalna-strategia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="camera" onclick="openModal(this)" onmouseout="removeHoverEffect(this)"
-                             onmouseover="hoverEffect(this)" src="../../image/project/gtnight-portfoli-03.webp">
-                        <div class="image-caption">GT NIGHT</div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery item end -->
-
-            <!-- gallery item start -->
-            <div class="gallery-item digitalna-strategia" data-filter="digitalna-strategia">
-                <div class="gallery-item-inner">
-                    <div class="image-overlay">
                         <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
                         <div class="image-caption">Headphone3</div>
                     </div>
                 </div>
             </div>
             <!-- gallery item end -->
-
+        </div>
+        <!-----------------------------------------3. column----------------------------------------->
+        <div class="column-port">
             <!-- gallery item start -->
             <div class="gallery-item digitalna-strategia" data-filter="digitalna-strategia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
                         <div class="image-caption">Headphone3</div>
                     </div>
@@ -202,7 +192,6 @@
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
                         <div class="image-caption">Headphone3</div>
                     </div>
@@ -211,76 +200,10 @@
             <!-- gallery item end -->
 
             <!-- gallery item start -->
-            <div class="gallery-item digitalna-strategia" data-filter="digitalna-strategia">
+            <div class="gallery-item wordpress-web" data-filter="wordpress-web">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
-                             src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
-                        <div class="image-caption">Headphone3</div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery item end -->
-
-            <!-- gallery item start -->
-            <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
-                <div class="gallery-item-inner">
-                    <div class="image-overlay">
-                        <img alt="headphone" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
-                             src="https://i.postimg.cc/3xTY15HR/c-d-x-PDX-a-82obo-unsplash.jpg">
-                        <div class="image-caption">Headphone</div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery item end -->
-
-            <!-- gallery item start -->
-            <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
-                <div class="gallery-item-inner">
-                    <div class="image-overlay">
-                        <img alt="camera" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
-                             src="https://i.postimg.cc/PrYL89TD/patrick-dozk-Vh-Dyvh-Q-unsplash.jpg">
-                        <div class="image-caption">Camera</div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery item end -->
-
-            <!-- gallery item start -->
-            <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
-                <div class="gallery-item-inner">
-                    <div class="image-overlay">
-                        <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
-                             src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
-                        <div class="image-caption">Headphone3</div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery item end -->
-
-            <!-- gallery item start -->
-            <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
-                <div class="gallery-item-inner">
-                    <div class="image-overlay">
-                        <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
-                             src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
-                        <div class="image-caption">Headphone3</div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery item end -->
-
-            <!-- gallery item start -->
-            <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
-                <div class="gallery-item-inner">
-                    <div class="image-overlay">
-                        <img alt="headphone3" onclick="openModal(this)"
-                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
                              src="https://i.postimg.cc/PqYyN2Nr/ervo-rocks-Zam8-Tv-Eg-N5o-unsplash.jpg">
                         <div class="image-caption">Headphone3</div>
                     </div>
@@ -293,11 +216,17 @@
 
 <!-- Gallery Modal -->
 <div class="modal-port" id="galleryModal-port">
-    <span class="close" onclick="closeModal()">&times;</span>
+    <div id="photoclosecontainer">
+        <span class="close-port-fot" onclick="closeModal()">&times;</span>
+    </div>
     <div class="modal-content">
-        <div class="prev" onclick="showPreviousImage()"><i aria-hidden="true" class="fa fa-chevron-left"></i></div>
+        <div class="image-count" id="imageCount"></div>
+        <div class="prev"><i aria-hidden="true" class="fa fa-chevron-left"></i></div>
+        <div id="photoCountContainer">
+            <div id="photoCount"></div>
+        </div>
         <img alt="" id="modalImage-port">
-        <div class="next" onclick="showNextImage()"><i aria-hidden="true" class="fa fa-chevron-right"></i></div>
+        <div class="next"><i aria-hidden="true" class="fa fa-chevron-right"></i></div>
     </div>
 </div>
 <br>
