JP GENERATION - PORFOLI GALLERY FIX

--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -461,7 +461,8 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Chivas Regal 15yo" onclick="openModal(this)" src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00007.webp">
+                        <img alt="Chivas Regal 15yo" onclick="openModal(this)"
+                             src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00007.webp">
                         <div class="image-caption-w">Chivas Regal XV promo</div>
                         <div class="image-text-w">ENCORE the club</div>
                     </div>
@@ -472,7 +473,8 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Gimlet Fruit" onclick="openModal(this)" src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00002.webp">
+                        <img alt="Gimlet Fruit" onclick="openModal(this)"
+                             src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00002.webp">
                         <div class="image-caption-h">Bar promo</div>
                         <div class="image-text-h">ENCORE the club</div>
                     </div>
@@ -483,7 +485,8 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Jahoda-liči limonáda" onclick="openModal(this)" src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00005.webp">
+                        <img alt="Jahoda-liči limonáda" onclick="openModal(this)"
+                             src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00005.webp">
                         <div class="image-caption-h">Bar promo</div>
                         <div class="image-text-h">ENCORE the club</div>
                     </div>
@@ -826,7 +829,8 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Nalievanie červeného vína" onclick="openModal(this)" src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00006.webp">
+                        <img alt="Nalievanie červeného vína" onclick="openModal(this)"
+                             src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00006.webp">
                         <div class="image-caption-h">Bar promo</div>
                         <div class="image-text-h">ENCORE the club</div>
                     </div>
