JP GENERATION - PORFOLI PHOTO BUTTOM ON SERVICES

--- a/plne-responzivny-web/jpgeneration/portfolio/video.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/video.html
@@ -77,7 +77,7 @@
     </div>
 </section>
 <!-------------ZACIATOK CONTENTU-------------->
-<section class="services">
+<section class="port-video">
     <header class="headline-con">
         <div class="con-main">
             <div class="line-con1"></div>
@@ -88,6 +88,19 @@
     <div class="con-look">
         <span>Vaša realizácia služby môže vyzerať takto</span>
     </div>
+</section>
+<section class="video">
+    <div class="video-row">
+
+        <div class="video-column">
+            <iframe src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video-column">
+            <iframe  src="https://www.youtube-nocookie.com/embed/F3asDg68raw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+
+    </div>
+
 </section>
 <br>
 <br>
