--- a/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-408VDD82V3');
+    </script>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Cenník - digitálna stratégia - JP GENERATION</title>
