JP GENERATION - .htaccess configuration

--- a/plne-responzivny-web/jpgeneration/gdpr.html
+++ b/plne-responzivny-web/jpgeneration/gdpr.html
@@ -16,11 +16,11 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>GDPR - JP GENERATION</title>
-    <link href="../../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
+    <link href="../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../../css/style.css" rel="stylesheet">
-    <link href="../../css/media.css" rel="stylesheet">
-    <link href="../../css/keyframe.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/media.css" rel="stylesheet">
+    <link href="../css/keyframe.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -31,22 +31,22 @@
 <section class="nav-background">
     <div class="nav-complet">
         <div class="log-div">
-            <a class="logo-jp" href="../index.html">
-                <img alt="JP GENERATION logo" id="logo" src="../../image/logo/asset-8-8.png">
+            <a class="logo-jp" href="index.html">
+                <img alt="JP GENERATION logo" id="logo" src="../image/logo/asset-8-8.png">
             </a>
         </div>
         <div class="topnav" id="myTopnav">
             <a class="icon" href="javascript:void(0);" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
-            <a href="../index.html">Domov</a>
+            <a href="index.html">Domov</a>
             <div class="dropdown">
                 <button class="dropbtn">Portfólio
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow1"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="../portfolio/fotky.html">Fotky</a>
-                    <a href="../portfolio/video.html">Video</a>
+                    <a href="portfolio/fotky.html">Fotky</a>
+                    <a href="portfolio/video.html">Video</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -54,12 +54,12 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow2"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
-                    <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
-                    <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
-                    <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
+                    <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
+                    <a href="sluzby/video-produkcia.html">Video produkcia</a>
+                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/wordpress-web.html">Wordpress web</a>
+                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -67,12 +67,12 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow3"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
-                    <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
-                    <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
-                    <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
+                    <a href="cennik/cena-foto-produkcia.html">Foto produkcia</a>
+                    <a href="cennik/cena-video-produkcia.html">Video produkcia</a>
+                    <a href="cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="cennik/cena-wordpress-web.html">Wordpress web</a>
+                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -80,11 +80,11 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow4"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="../o-nas/kto-vlastne-sme.html">Kto vlastne sme</a>
-                    <a href="../o-nas/zakaznici.html">Zákazníci</a>
+                    <a href="o-nas/kto-vlastne-sme.html">Kto vlastne sme</a>
+                    <a href="o-nas/zakaznici.html">Zákazníci</a>
                 </div>
             </div>
-            <a href="../kontakt/kontakt.html">Kontakt</a>
+            <a href="kontakt.html">Kontakt</a>
         </div>
     </div>
 </section>
@@ -352,8 +352,8 @@
     <section class="main">
         <div class="fot-logo-disc">
             <div class="fot-logo">
-                <a href="../index.html">
-                    <img alt="logo jp generation" class="logo-foot" src="../../image/logo/asset-8-8.png">
+                <a href="index.html">
+                    <img alt="logo jp generation" class="logo-foot" src="../image/logo/asset-8-8.png">
                 </a>
             </div>
             <div class="slog">
@@ -366,19 +366,19 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
+                    <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/wordpress-web.html">Wordpress web</a>
+                    <a href="sluzby/wordpress-web.html">Wordpress web</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
+                    <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
         </div>
@@ -387,19 +387,19 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../o-nas/kto-vlastne-sme.html">Kto vlastne sme</a>
+                    <a href="o-nas/kto-vlastne-sme.html">Kto vlastne sme</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../portfolio/fotky.html">Portfólio</a>
+                    <a href="portfolio/fotky.html">Portfólio</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../gdpr/gdpr.html">Zásady ochrany osobných údajov</a>
+                    <a href="gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../cookie/cookie.html">Zásady používania súborov cookie</a>
+                    <a href="cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
@@ -484,7 +484,7 @@
 <br>
 <br>
 <!-------------JAVA SCRIPT-------------->
-<script src="../../js/nav.js" type="text/javascript"></script>
-<script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../js/nav.js" type="text/javascript"></script>
+<script src="../js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
