--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -84,7 +84,7 @@
                     <a href="o-nas/zakaznici.html">Zákazníci</a>
                 </div>
             </div>
-            <a href="kontakt/kontakt.html">Kontakt</a>
+            <a href="kontakt.html">Kontakt</a>
         </div>
     </div>
 </section>
@@ -155,7 +155,7 @@
 <br>
 <section class="new-gen">
     <div class="wrapper">
-        <a class="button-gen" href="kontakt/kontakt.html">
+        <a class="button-gen" href="kontakt.html">
             <span></span>
             <span></span>
             <span></span>
@@ -344,7 +344,7 @@
             </div>
             <div class="modal-port">
                 <span class="close-proj">&times;</span>
-                <img class="modalImage" id="img01"/>
+                <img alt="modal" class="modalImage" id="img01"/>
             </div>
         </div>
     </section>
@@ -457,7 +457,7 @@
             <div class="overlay-content">
                 <h2 class="mind">Máte na mysli niečo veľké?</h2>
                 <button class="come-on">
-                    <a class="come" href="kontakt/kontakt.html">Poďme na to!</a>
+                    <a class="come" href="kontakt.html">Poďme na to!</a>
                 </button>
             </div>
         </div>
@@ -513,11 +513,11 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="gdpr/gdpr.html">Zásady ochrany osobných údajov</a>
+                    <a href="gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="cookie/cookie.html">Zásady používania súborov cookie</a>
+                    <a href="cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
