--- a/plne-responzivny-web/jpgeneration/portfolio/video.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/video.html
@@ -84,7 +84,7 @@
                     <a href="../o-nas/zakaznici.html">Zákazníci</a>
                 </div>
             </div>
-            <a href="../kontakt/kontakt.html">Kontakt</a>
+            <a href="../kontakt.html">Kontakt</a>
         </div>
     </div>
 </section>
@@ -105,10 +105,10 @@
     <div class="video-row">
 
         <div class="video-column">
-            <iframe src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="video-column">
-            <iframe  src="https://www.youtube-nocookie.com/embed/F3asDg68raw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube-nocookie.com/embed/F3asDg68raw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
     </div>
@@ -164,11 +164,11 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../gdpr/gdpr.html">Zásady ochrany osobných údajov</a>
+                    <a href="../gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../cookie/cookie.html">Zásady používania súborov cookie</a>
+                    <a href="../cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
