--- a/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
@@ -84,7 +84,7 @@
                     <a href="../o-nas/zakaznici.html">Zákazníci</a>
                 </div>
             </div>
-            <a href="../kontakt/kontakt.html">Kontakt</a>
+            <a href="../kontakt.html">Kontakt</a>
         </div>
     </div>
 </section>
@@ -156,11 +156,11 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../gdpr/gdpr.html">Zásady ochrany osobných údajov</a>
+                    <a href="../gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../cookie/cookie.html">Zásady používania súborov cookie</a>
+                    <a href="../cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
