--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -84,7 +84,7 @@
                     <a href="../o-nas/zakaznici.html">Zákazníci</a>
                 </div>
             </div>
-            <a href="../kontakt/kontakt.html">Kontakt</a>
+            <a href="../kontakt.html">Kontakt</a>
         </div>
     </div>
 </section>
@@ -1179,7 +1179,7 @@
         <div id="photoCountContainer">
             <div id="photoCount"></div>
         </div>
-        <img alt="" id="modalImage-port">
+        <img alt="modal" id="modalImage-port">
         <div class="next"><i aria-hidden="true" class="fa fa-chevron-right"></i></div>
     </div>
 </div>
@@ -1233,11 +1233,11 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../gdpr/gdpr.html">Zásady ochrany osobných údajov</a>
+                    <a href="../gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../cookie/cookie.html">Zásady používania súborov cookie</a>
+                    <a href="../cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
