JP GENERATION - .htaccess configuration

--- a/plne-responzivny-web/jpgeneration/portfolio/video.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/video.html
@@ -105,10 +105,10 @@
     <div class="video-row">
 
         <div class="video-column">
-            <iframe src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="video-column">
-            <iframe  src="https://www.youtube-nocookie.com/embed/F3asDg68raw" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube-nocookie.com/embed/F3asDg68raw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
     </div>
