--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -98,7 +98,7 @@
         <h2>Služba - Video produkcia</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../portfolio/video.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </button>
         </div>
     </header>
