JP GENERATION - contac button

--- a/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
@@ -96,6 +96,11 @@
             <div class="spacer"></div>
         </div>
         <h2>Cenník - Video produkcia</h2>
+        <div class="services-btn">
+            <button class="port-btn">
+                <a class="port-txt" href="../kontakt.html">Mám záujem <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            </button>
+        </div>
     </header>
     <div class="con-look">
         <span>Cena za vašu video produkciu</span>
