--- a/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
@@ -95,7 +95,12 @@
             <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <h2>Cenník - Wordpress web</h2>
+        <h2>Cenník - WordPress web</h2>
+        <div class="services-btn">
+            <button class="port-btn">
+                <a class="port-txt" href="../kontakt.html">Mám záujem <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            </button>
+        </div>
     </header>
     <div class="con-look">
         <span>Cena za váš wordpress web</span>
