JP GENERATION - SERVICES

--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -97,13 +97,102 @@
         </div>
         <h2>Služba - Foto produkcia</h2>
         <div class="services-btn">
-        <button class="port-btn">
-            <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-        </button>
+            <button class="port-btn">
+                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true" class="fa fa-long-arrow-right"></i></a>
+            </button>
         </div>
     </header>
-    <div class="con-look">
+    <div class="con-look-ser">
         <span>Užitočná služba pre vašu digitálnu generáciu</span>
+    </div>
+    <section class="content-ser-1">
+        <div>
+            <i aria-hidden="true" class="fa fa-birthday-cake" id="con-ser-icon1"></i>
+            <h3>Udalosť</h3>
+            <p class="con-ser-p">Udalosť na ktorú nechcete zabudnúť? Spomienka na párty kde sa Vaši zákazníci bavili? Svadba ktorá sa väčšinou koná len raz za život? S nami na ňu určite nezabudnete…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-calendar" id="con-ser-icon2"></i>
+            <h3>Firemná akcia</h3>
+            <p class="con-ser-p">Firemný večierok alebo team building? Ukážte svojim zákazníkom že popri tom všetkom sa staráte dobre aj o svojich zamestnancov…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-shopping-cart" id="con-ser-icon3"></i>
+            <h3>Produkt</h3>
+            <p class="con-ser-p">Chceme rozbehnúť alebo vlastníme e-shop no fotky z mobilu nedodávajú tomu ten správny efekt? Každý jeden zákazník chce vedieť detailne čo kupuje preto to nepodceňte…</p>
+        </div>
+    </section>
+    <section class="content-ser-2">
+        <div>
+            <i aria-hidden="true" class="fa fa-building-o" id="con-ser-icon4"></i>
+            <h3>Priestor</h3>
+            <p class="con-ser-p">Prenajímate alebo predávate byt, dom, kancelárske priestory? Otvárate novú reštauráciu alebo bar? Poskytnite zákazníkom zážitok ešte pred prvým vstupom…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-users" id="con-ser-icon5"></i>
+            <h3>Ľudia</h3>
+            <p class="con-ser-p">Potrebujete profesionálne fotky pre Vaších zamestnancov? Chceli by ste nový portrét alebo profilovú fotografiu? V pohodlí ateliéru to spolu dokážeme…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-television" id="con-ser-icon6"></i>
+            <h3>Reklama</h3>
+            <p class="con-ser-p">Vyčerpali ste databázu fotiek pre Vašú reklamu alebo sociálnu sieť? Poďme na to…</p>
+        </div>
+    </section>
+    <section class="content-ser-3">
+        <div>
+            <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
+            <h3>360° fotografia</h3>
+            <p class="con-ser-p">Chcete poskytnúť svojím zákazníkom lepši zážitok a detail z prezeraného produktu? Veľkostne maximálne do 60 x 60 x 50cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný produkt to bude stačiť…</p>
+        </div>
+    </section>
+</section>
+<br>
+<br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+
+            </div>
+            <div class="faq-text">
+
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <div class="faq-service-headline">
+
+                    </div>
+                    <div class="faq-srvice-text">
+
+                    </div>
+
+                </div>
+                <div class="menu-2">
+                    <div class="faq-service-headline">
+
+                    </div>
+                    <div class="faq-srvice-text">
+
+                    </div>
+
+                </div>
+                <div class="menu-3">
+                    <div class="faq-service-headline">
+
+                    </div>
+                    <div class="faq-srvice-text">
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
     </div>
 </section>
 <br>
