JP GENERATION - SERVICES + FAQ

--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -146,6 +146,10 @@
             <p class="con-ser-p">Chcete poskytnúť svojím zákazníkom lepši zážitok a detail z prezeraného produktu? Veľkostne maximálne do 60 x 60 x 50cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný produkt to bude stačiť…</p>
         </div>
     </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
 </section>
 <br>
 <br>
