--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -157,39 +157,44 @@
 <section class="faq">
     <div class="faq-cointainer">
         <div class="faq-photo">
-
+            <img alt="foto produkcia" src="../../image/faq/faq-fotoprodukcia.webp">
         </div>
         <div class="faq-content">
             <div class="faq-headline">
-
-            </div>
-            <div class="faq-text">
-
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser">
+                    <span>Najčastejšie otázky</span>
+                </div>
+                <div class="skill-text">
+                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                </div>
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <div class="faq-service-headline">
-
-                    </div>
-                    <div class="faq-srvice-text">
-
+                    <button class="accordion">Dodanie služby</button>
+                    <div class="panel">
+                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené fotografie po fotení nahrajeme zákazníkovi na cloudove úložisko, kde budú uchované 30 dní. V prípade dodania fotografi v tlačovej forme už ide o konkrétnu dohodu medzi nami a zákazníkom.</p>
                     </div>
 
                 </div>
                 <div class="menu-2">
-                    <div class="faq-service-headline">
-
-                    </div>
-                    <div class="faq-srvice-text">
-
+                    <button class="accordion">Platba za službu</button>
+                    <div class="panel">
+                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
                     </div>
 
                 </div>
                 <div class="menu-3">
-                    <div class="faq-service-headline">
-
+                    <button class="accordion">Nenašiel som informácie ktoré potrebujem</button>
+                    <div class="panel active">
+                        <p>Radi Vám ich zodpovieme v sekcii <a href="../kontakt.html">kontakt</a></p>
                     </div>
-                    <div class="faq-srvice-text">
 
                     </div>
 
@@ -340,5 +345,6 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
