--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -192,7 +192,7 @@
                 </div>
                 <div class="menu-3">
                     <button class="accordion">Nenašiel som informácie ktoré potrebujem</button>
-                    <div class="panel active">
+                    <div class="panel">
                         <p>Radi Vám ich zodpovieme v sekcii <a href="../kontakt.html">kontakt</a></p>
                     </div>
 
