JP GENERATION - SERVICES + FAQ

--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -177,23 +177,23 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion">Dodanie služby</button>
+                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
                     <div class="panel">
                         <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené fotografie po fotení nahrajeme zákazníkovi na cloudove úložisko, kde budú uchované 30 dní. V prípade dodania fotografi v tlačovej forme už ide o konkrétnu dohodu medzi nami a zákazníkom.</p>
                     </div>
 
                 </div>
                 <div class="menu-2">
-                    <button class="accordion">Platba za službu</button>
+                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
                     <div class="panel">
                         <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
                     </div>
 
                 </div>
                 <div class="menu-3">
-                    <button class="accordion">Nenašiel som informácie ktoré potrebujem</button>
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span></button>
                     <div class="panel">
-                        <p>Radi Vám ich zodpovieme v sekcii <a href="../kontakt.html">kontakt</a></p>
+                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
                     </div>
