JP GENERATION - SERVICES + FAQ - COMPLEAT

--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -145,6 +145,8 @@
             <h3>360° fotografia</h3>
             <p class="con-ser-p">Chcete poskytnúť svojím zákazníkom lepši zážitok a detail z prezeraného produktu? Veľkostne maximálne do 60 x 60 x 50cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný produkt to bude stačiť…</p>
         </div>
+        <section class="spacer-div"></section>
+        <section class="spacer-div"></section>
     </section>
     <section class="content-ser-line">
         <div>
@@ -168,7 +170,7 @@
                     </div>
                     <h2>Informácie</h2>
                 </header>
-                <div class="con-look-ser">
+                <div class="con-look-ser-faq">
                     <span>Najčastejšie otázky</span>
                 </div>
                 <div class="skill-text">
