--- a/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
@@ -98,12 +98,118 @@
         <h2>Služba - Digitálna stratégia</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true"
+                                                                                class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
     <div class="con-look">
         <span>Užitočná služba pre vašu digitálnu generáciu</span>
+    </div>
+    <section class="content-ser-1">
+        <div>
+            <i aria-hidden="true" class="fa fa-home" id="con-ser-icon1"></i>
+            <h3>Analýza firmy</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Analýza poskytovaných produktov a služieb. Analýza silných a slabých strán firmy + príležitostí a rizík klienta…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-users" id="con-ser-icon2"></i>
+            <h3>Analýza zákazníkov</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Analýza zákazníka z pohľadu zákazníka ktorá Vám pomôže pochopiť jeho potreby. Čo ho motivuje využívať Vaše produkty alebo služby a čo ho naopak odrádza…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-bar-chart" id="con-ser-icon3"></i>
+            <h3>Vyhodnotenie analýz</h3>
+            <p class="con-ser-p">Vyhotovíme Vám report ktorý bude obsahovať informácie o Vašej firme a zákazníkoch…</p>
+        </div>
+    </section>
+    <section class="content-ser-2">
+        <div>
+            <i aria-hidden="true" class="fa fa-arrow-up" id="con-ser-icon4"></i>
+            <h3>Nastavenie cieľov</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Pri nastavení cieľov je potrebné sa zamyslieť či sú krátkodobé alebo dlhodobé. Pri výbere stratégie je to veľmi dôležite či bude trvať 1 mesiac alebo 1 rok…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-laptop" id="con-ser-icon5"></i>
+            <h3>Nastavenie stratégie</h3>
+            <p class="con-ser-p">Nastavenie marketingovej, biznisovej a digitálnej kampane priamo pre Vašé potreby…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-calculator" id="con-ser-icon6"></i>
+            <h3>Vyhodnotenie stratégie</h3>
+            <p class="con-ser-p">Vyhotovenie reportu ktorý porovná produkty alebo firmu pred začiatkom digitálnej stratégie a po nastavenom období…</p>
+        </div>
+    </section>
+    <section class="content-ser-3">
+        <div>
+            <i aria-hidden="true" class="fa fa-microphone-slash" id="con-ser-icon7"></i>
+            <h3>Diskrétnosť</h3>
+            <p class="con-ser-p">Nemusíte sa báť že Vám niečo unikne. Vašé interné informácie nepoužijeme v podklade pre iné firmy alebo pre našé portfólio…</p>
+        </div>
+        <section class="spacer-div"></section>
+        <section class="spacer-div"></section>
+    </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
+</section>
+<br>
+<br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+            <img alt="foto produkcia" src="../../image/faq/faq-digitalnastrategia.webp">
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser-faq">
+                    <span>Najčastejšie otázky</span>
+                </div>
+                <div class="skill-text">
+                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                </div>
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <div class="panel">
+                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste ak Vaša firma má pobočku. V prípade že ste e-shop bez pobočky služba sa vykonáva elektronicky. Report Vám dodáme osobne alebo prostredníctvom elektronickej komunikácie.</p>
+                    </div>
+
+                </div>
+                <div class="menu-2">
+                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <div class="panel">
+                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií
+                            služby.</p>
+                    </div>
+
+                </div>
+                <div class="menu-3">
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    </button>
+                    <div class="panel">
+                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     </div>
 </section>
 <br>
@@ -247,5 +353,6 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
