--- a/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
@@ -98,12 +98,119 @@
         <h2>Služba - Graficky dizajn</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true"
+                                                                                class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
     <div class="con-look">
         <span>Užitočná služba pre vašu digitálnu generáciu</span>
+    </div>
+    <section class="content-ser-1">
+        <div>
+            <i aria-hidden="true" class="fa fa-google-wallet" id="con-ser-icon1"></i>
+            <h3>Logo</h3>
+            <p class="con-ser-p">Unikátne logo pre Vaše podnikanie. Nemusí to byť len obyčajný text…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-bolt" id="con-ser-icon2"></i>
+            <h3>Firemná identita</h3>
+            <p class="con-ser-p">Návrh celej identity firmy. Logo a jeho používanie, font písma, vizitka, web, sociálne siete, cenník. Záleží na tom v akej sfére podnikáte…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-picture-o" id="con-ser-icon3"></i>
+            <h3>Reklama</h3>
+            <p class="con-ser-p">Spracovanie reklamy pre internet, billboard alebo televíziu jednoducho všetko čo Vašá kampaň vyžaduje…</p>
+        </div>
+    </section>
+    <section class="content-ser-2">
+        <div>
+            <i aria-hidden="true" class="fa fa-print" id="con-ser-icon4"></i>
+            <h3>Podklady pre tlač</h3>
+            <p class="con-ser-p">Spracujeme všetky podklady pre tlač a na Vás zostane už len realizácia…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-share-square-o" id="con-ser-icon5"></i>
+            <h3>Sociálna identita</h3>
+            <p class="con-ser-p">Vzhľad Vašich sociálnych sieti je podstatný pre nadobudnutie nových sledovateľov. Preto nepodceňte svoju identitu…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-low-vision" id="con-ser-icon6"></i>
+            <h3>Vizuál</h3>
+            <p class="con-ser-p">Máte produkt ktorý plánujete v budúcnosti predávať? No reálne ho ešte nemôžete držať v rukách? Spracujeme Vám vizuál pre jeho prezentáciu…</p>
+        </div>
+    </section>
+    <section class="content-ser-3">
+        <div>
+            <i aria-hidden="true" class="fa fa-file-image-o" id="con-ser-icon7"></i>
+            <h3>Úprava fotografie</h3>
+            <p class="con-ser-p">Máte surové fotky bez úpravy a neviete čo s nimi? Máte roztrhnutú fotku v tlačovej podobe? Nechajte to na nás s týmto všetkým si dokážeme poradiť…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-file-image-o" id="con-ser-icon8"></i>
+            <h3>Web dizajn</h3>
+            <p class="con-ser-p">Vytvoríme Vám vzhľad Vášho budúceho webu. V prípade že web chcete spustiť vo vlastnej réžií…</p>
+        </div>
+        <section class="spacer-div"></section>
+    </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
+</section>
+<br>
+<br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+            <img alt="foto produkcia" src="../../image/faq/faq-grafickydizajn.webp">
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser-faq">
+                    <span>Najčastejšie otázky</span>
+                </div>
+                <div class="skill-text">
+                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                </div>
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <div class="panel">
+                        <p>Hotový dizajn alebo produkt nahrajeme zákazníkovi na cloudove úložisko, kde bude uchovaný 30 dní.</p>
+                    </div>
+
+                </div>
+                <div class="menu-2">
+                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <div class="panel">
+                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií
+                            služby.</p>
+                    </div>
+
+                </div>
+                <div class="menu-3">
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    </button>
+                    <div class="panel">
+                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     </div>
 </section>
 <br>
@@ -247,5 +354,6 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
