--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -98,12 +98,119 @@
         <h2>Služba - Správa domeny a hostingu</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true"
+                                                                                class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
     <div class="con-look">
         <span>Užitočná služba pre vašu digitálnu generáciu</span>
+    </div>
+    <section class="content-ser-1">
+        <div>
+            <i aria-hidden="true" class="fa fa-shopping-basket" id="con-ser-icon1"></i>
+            <h3>Máme vlastnú domenu</h3>
+            <p class="con-ser-p">Maté vlastnú domenu? Neviete ako ju spravovať? Nevádi urobíme to za Vás…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-server" id="con-ser-icon2"></i>
+            <h3>Máme vlastný hosting</h3>
+            <p class="con-ser-p">Po spustený webu Vám zanechaly prihlasovacie údaje a nevie čo s tým? Každe jedno nastavenie je pre Vás neznáme? Nechajte to na Nás…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-clock-o" id="con-ser-icon3"></i>
+            <h3>Ušetríme Vám čas</h3>
+            <p class="con-ser-p">Postaráme sa Vám o bezstarostný chod domény a hostingu aby ste vedeli využiť svoj čas na podstatnejšie veci…</p>
+        </div>
+    </section>
+    <section class="content-ser-2">
+        <div>
+            <i aria-hidden="true" class="fa fa-wrench" id="con-ser-icon4"></i>
+            <h3>Optimalizácia webu</h3>
+            <p class="con-ser-p">Skontrolujeme či všetko je nastavené správne od základov…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-tasks" id="con-ser-icon5"></i>
+            <h3>Optimalizácia servera</h3>
+            <p class="con-ser-p">Zdá sa Vám že web je pomalý? Postaráme sa o to aby Váš zákazník mal pôžitok z návštevy Vašeho webu…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon6"></i>
+            <h3>Kontrola zabezpečenia</h3>
+            <p class="con-ser-p">Skontrolujeme Váš kód, SSL certifikát, dáta, anti-spam, použivanie cookie a GDPR. Aby sa Váš klient cítil na Vašom webe bezpečne…</p>
+        </div>
+    </section>
+    <section class="content-ser-3">
+        <div>
+            <i aria-hidden="true" class="fa fa-cloud-upload" id="con-ser-icon7"></i>
+            <h3>Prenos dát ku nám</h3>
+            <p class="con-ser-p">Nespoľahlivý alebo pomaly hosting? Bezproblémovo a bez nutnosti odstávky webu prenesieme Vaše dáta bezpečne na spoľahlivý hosting…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-medkit" id="con-ser-icon8"></i>
+            <h3>24/7 Podpora</h3>
+            <p class="con-ser-p">Neočakavaná chyba môže nastať vždy. Preto sme tu pre Vás 24/7 aby Váš biznis mohol rásť…</p>
+        </div>
+        <section class="spacer-div"></section>
+    </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
+</section>
+<br>
+<br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+            <img alt="foto produkcia" src="../../image/faq/faq-spravadomenyahostingu.webp">
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser-faq">
+                    <span>Najčastejšie otázky</span>
+                </div>
+                <div class="skill-text">
+                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                </div>
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <div class="panel">
+                        <p>Službu dodávame elektronicky od Vás budeme potrebovať prístupové údaje k vašej domene a hostingu alebo prípadne k FTP serveru.</p>
+                    </div>
+
+                </div>
+                <div class="menu-2">
+                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <div class="panel">
+                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií
+                            služby.</p>
+                    </div>
+
+                </div>
+                <div class="menu-3">
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    </button>
+                    <div class="panel">
+                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     </div>
 </section>
 <br>
@@ -247,5 +354,6 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
