--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -98,12 +98,114 @@
         <h2>Služba - Video produkcia</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../portfolio/video.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../portfolio/video.html">Portfólio <i aria-hidden="true"
+                                                                                class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
     <div class="con-look">
         <span>Užitočná služba pre vašu digitálnu generáciu</span>
+    </div>
+    <section class="content-ser-1">
+        <div>
+            <i aria-hidden="true" class="fa fa-facebook" id="con-ser-icon1"></i>
+            <h3>Facebook</h3>
+            <p class="con-ser-p">After movie z vašej akcie alebo propagácia produktu? Produkt Vám dodáme tak aby ste ho už len bezstarostne pridali jedným klikom…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-instagram" id="con-ser-icon2"></i>
+            <h3>Instargam</h3>
+            <p class="con-ser-p">Reels alebo video post. Sledujete tie užasne videá na instagrame no neviete ich vytvoriť?Radi Vám s tým pomôžeme…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-youtube-play" id="con-ser-icon3"></i>
+            <h3>YouTube</h3>
+            <p class="con-ser-p">Máte kanál na YouTube ktorý chcete posunúť na vyšší level? Vaše videá vyzerajú obyčajne? Ukážeme Vám ako to má vyzerať…/p>
+        </div>
+    </section>
+    <section class="content-ser-2">
+        <div>
+            <i aria-hidden="true" class="fa fa-globe" id="con-ser-icon4"></i>
+            <h3>Web</h3>
+            <p class="con-ser-p">Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-scissors" id="con-ser-icon5"></i>
+            <h3>Strihanie</h3>
+            <p class="con-ser-p">Máme natočené video aj myšlienku ako by malo vyzerať no nemáme so strihom skúsenosť. Pošlite nám ho a určite niečo spoločne vymyslíme…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-file-video-o" id="con-ser-icon6"></i>
+            <h3>Re-editácia</h3>
+            <p class="con-ser-p">Máme sériu after movie a chceli by sme si pridať jedno spomienkové video a na všetky. Zašlite nám ich a urobíme z nich niečo nové…</p>
+        </div>
+    </section>
+    <section class="content-ser-3">
+        <div>
+            <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
+            <h3>360° video</h3>
+            <p class="con-ser-p">Chcete poskytnúť svojím zákazníkom lepši zážitok a detail z prezeraného produktu? Veľkostne maximálne do 60 x 60 x 50cm. Auto Vám zatiaľ profesionálne natočiť nedokážeme ale pre bežný produkt to bude stačiť…</p>
+        </div>
+        <section class="spacer-div"></section>
+        <section class="spacer-div"></section>
+    </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
+</section>
+<br>
+<br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+            <img alt="foto produkcia" src="../../image/faq/faq-videoprodukcia.webp">
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser-faq">
+                    <span>Najčastejšie otázky</span>
+                </div>
+                <div class="skill-text">
+                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                </div>
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <div class="panel">
+                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené video po točení nahrajeme zákazníkovi na cloudove úložisko, kde budú uchované 30 dní.</p>
+                    </div>
+
+                </div>
+                <div class="menu-2">
+                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <div class="panel">
+                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
+                    </div>
+
+                </div>
+                <div class="menu-3">
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    </button>
+                    <div class="panel">
+                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     </div>
 </section>
 <br>
@@ -247,5 +349,6 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
