--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -98,12 +98,144 @@
         <h2>Služba - WordPress web</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true"
+                                                                                class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
     <div class="con-look">
         <span>Užitočná služba pre vašu digitálnu generáciu</span>
+    </div>
+    <section class="content-ser-1">
+        <div>
+            <i aria-hidden="true" class="fa fa-shopping-cart" id="con-ser-icon1"></i>
+            <h3>Zakúpenie vlastnej domeny</h3>
+            <p class="con-ser-p">Doména je vaša adresa na internete. Môže sa stať adresou vašej webstránky alebo smerovať na iný web, či profil na sociálnej sieti… (.sk, .online, .eu, .com, .store…)</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-server" id="con-ser-icon2"></i>
+            <h3>Umiestnenie na hosting</h3>
+            <p class="con-ser-p">Webhosting je vyhradený diskový priestor a výkon na serveri, ktorý je neustále pripojený do siete internet, aby sa k obsahu webových stránok dostali návštevníci kedykoľvek a z akéhokoľvek miesta na svete…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-certificate" id="con-ser-icon3"></i>
+            <h3>SSL certifikát</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Tento protokol (certifikát) zabezpečuje šifrovaný prenos dát medzi vašim počítačom a webstránkou alebo serverom, na ktoré sa pripájate cez internet…</p>
+        </div>
+    </section>
+    <section class="content-ser-2">
+        <div>
+            <i aria-hidden="true" class="fa fa-wordpress" id="con-ser-icon4"></i>
+            <h3>Inštalácia</h3>
+            <p class="con-ser-p">Nainštalujeme na Vašú domenu WordPress s ktorým pár úkonov zvládnete aj Vy bez znalosti kódu…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-cogs" id="con-ser-icon5"></i>
+            <h3>Nastavenie</h3>
+            <p class="con-ser-p">Správne nastavenie je základ aby všetko fungovalo ako má…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-television" id="con-ser-icon6"></i>
+            <h3>Dizajn</h3>
+            <p class="con-ser-p">Vzhľad Vášho webu môže vyzerať ako len chcete…</p>
+        </div>
+    </section>
+    <section class="content-ser-3">
+        <div>
+            <i aria-hidden="true" class="fa fa-mouse-pointer" id="con-ser-icon7"></i>
+            <h3>Funkčnosť</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Na to aby to fungovalo nestači len pekný dizajn. Každe tlačidlo alebo animácia musí fungovať ako chceme my…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon8"></i>
+            <h3>Zabezpečenie</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Ochrana Vášho webu proti ukradnutiu dôležitých dát používateľov…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-pie-chart" id="con-ser-icon9"></i>
+            <h3>GDPR a cookie súbory</h3>
+            <p class="con-ser-p">Keďže na niektoré úkony musíš dostať súhlas od zákazníka alebo používateľa webu. Nastavíme to tak aby oba strany boli spokojné…</p>
+        </div>
+    </section>
+    <section class="content-ser-4">
+        <div>
+            <i aria-hidden="true" class="fa fa-check-square-o" id="con-ser-icon10"></i>
+            <h3>Posledný test a sme online</h3>
+            <p class="con-ser-p">Posledná skúška aby sme Vám odovzdali 100% produkt…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-user-secret" id="con-ser-icon11"></i>
+            <h3>Odovzdanie webu</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">Odovzdáme Vám všetky potrebné prihlasovacie udajé na správu Vašého webu…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-volume-control-phone" id="con-ser-icon12"></i>
+            <h3>Podpora</h3>
+            <span class="spacer2"></span>
+            <p class="con-ser-p">V prípade že správu domeny a hostingu necháte na nás. Tak sme tu pre Vás 24/7 pri neočakávaných chybách domeny…</p>
+        </div>
+    </section>
+    <section class="content-ser-line">
+        <div>
+        </div>
+    </section>
+</section>
+<br>
+<br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+            <img alt="foto produkcia" src="../../image/faq/faq-wordpressweb.webp">
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser-faq">
+                    <span>Najčastejšie otázky</span>
+                </div>
+                <div class="skill-text">
+                    Často kladené otázky od zákazníkov pred realizáciou služby.
+                </div>
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
+                    <div class="panel">
+                        <p>Hotový web Vám odovzdáme ako náhle bude dokončený podľa Vaších predstáv. Všetky prístupové údaje a informácie doručíme bezpečne aby sa k ním nedostala tretia strana.</p>
+                    </div>
+
+                </div>
+                <div class="menu-2">
+                    <button class="accordion"><span class="btn-text">Platba za službu</span></button>
+                    <div class="panel">
+                        <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
+                    </div>
+
+                </div>
+                <div class="menu-3">
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    </button>
+                    <div class="panel">
+                        <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     </div>
 </section>
 <br>
@@ -247,5 +379,6 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
